--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-21 Mon 11:18]
+#+CAPTION: Clock summary at [2017-08-21 Mon 11:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *27:58* |       |       | 100.0 |
+| *Total time*                                                                | *28:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 27:58   |       |       | 100.0 |
-| Active                                                                      |         | 27:58 |       | 100.0 |
+| Stories                                                                     | 28:20   |       |       | 100.0 |
+| Active                                                                      |         | 28:20 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   2.7 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  22.8 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |  10.1 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   4.2 |
-| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   5.2 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  44.1 |
-| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   7.9 |
-| STARTED Remove scribble group from intermediate model                       |         |       |  0:17 |   1.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   2.6 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  22.5 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |  10.0 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   4.1 |
+| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   5.1 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  43.5 |
+| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   7.8 |
+| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   2.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -266,7 +266,10 @@ Notes:
   populate the root module. It makes more sense to populate the root
   module in the JSON.
 
-*** STARTED Remove scribble group from intermediate model             :story:
+*** COMPLETED Remove scribble group from intermediate model           :story:
+    CLOSED: [2017-08-21 Mon 11:28]
+    CLOCK: [2017-08-21 Mon 11:29]--[2017-08-21 Mon 11:42] =>  0:13
+    CLOCK: [2017-08-21 Mon 11:19]--[2017-08-21 Mon 11:28] =>  0:09
     CLOCK: [2017-08-20 Sun 22:06]--[2017-08-20 Sun 22:23] =>  0:17
 
 Now we have an exogenous model we no longer need the scribble group in
