--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,26 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-21 Mon 21:37]
+#+CAPTION: Clock summary at [2017-08-21 Mon 23:48]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:36* |       |       | 100.0 |
+| *Total time*                                                                | *32:02* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:36   |       |       | 100.0 |
-| Active                                                                      |         | 31:36 |       | 100.0 |
+| Stories                                                                     | 32:02   |       |       | 100.0 |
+| Active                                                                      |         | 32:02 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   3.0 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  20.1 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   9.0 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.7 |
-| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.6 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  39.0 |
-| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   7.0 |
-| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   2.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.9 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  19.9 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   8.8 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.6 |
+| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.5 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  38.5 |
+| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.9 |
+| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   2.0 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.8 |
 | COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   3.2 |
 | COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   5.7 |
+| COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -381,6 +382,13 @@ model" to exomodel.
 
 As per analysis story on renaming, rename all instances of "exogenous
 model" to exomodel.
+
+*** COMPLETED Fix broken build due to JSON tests                      :story:
+    CLOSED: [2017-08-21 Mon 23:46]
+    CLOCK: [2017-08-21 Mon 23:20]--[2017-08-21 Mon 23:46] =>  0:26
+
+After much faffing around, it seems we inadvertently removed c++
+output from JSON models, resulting in travis builds breaks.
 
 *** Add validation to tailor transforms                               :story:
 
