--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,27 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-21 Mon 23:48]
+#+CAPTION: Clock summary at [2017-08-22 Tue 00:39]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *32:02* |       |       | 100.0 |
+| *Total time*                                                                | *32:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 32:02   |       |       | 100.0 |
-| Active                                                                      |         | 32:02 |       | 100.0 |
+| Stories                                                                     | 32:54   |       |       | 100.0 |
+| Active                                                                      |         | 32:54 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.9 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  19.9 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   8.8 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.6 |
-| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.5 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  38.5 |
-| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.8 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  19.4 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   8.6 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.5 |
+| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.4 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  37.5 |
+| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.7 |
 | COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   2.0 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.8 |
-| COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   3.2 |
-| COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   5.7 |
-| COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.4 |
+| COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   3.1 |
+| COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   5.5 |
+| COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.3 |
+| STARTED Clean up transforms to match exogenous/endogenous models            |         |       |  0:52 |   2.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -389,6 +390,30 @@ model" to exomodel.
 
 After much faffing around, it seems we inadvertently removed c++
 output from JSON models, resulting in travis builds breaks.
+
+*** STARTED Clean up transforms to match exogenous/endogenous models  :story:
+    CLOCK: [2017-08-22 Tue 00:37]--[2017-08-22 Tue 00:39] =>  0:02
+    CLOCK: [2017-08-21 Mon 23:47]--[2017-08-22 Tue 00:37] =>  0:50
+
+Now that we've cleaned up the model terminology, we should line up the
+chains that create these different types of models, such that each
+chain only generates one kind of model and a top-level chain is
+responsible from moving from one model type to another - i.e. avoid
+creating heterogeneous chains with regards to model type.
+
+Tasks:
+
+- rename endomodel transform to =exomodel_to_endomodel_transform=
+- remove endomodel transform from exoendo
+- rename exoendo to exomodel generation chain
+- add =exomodel_to_endomodel_transform= to both initial target and
+  references chains.
+- rename model generation chain to endomodel generation chain
+- remove final model transform from model assembly chain
+- rename final model transform to endomodel to model transform
+- create a model generation chain transform which calls the endomodel
+  generation chain and then processes the result with the endomodel to
+  model transform.
 
 *** Add validation to tailor transforms                               :story:
 
